<resources>
    <string name="app_name">bebehelper-mvvm</string>

    <string name="grouping">그룹핑</string>
    <string name="recommended_activity">추천 활동</string>
    <string name="my_page">마이페이지</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <!-- Grouping -->
    <string name="group_write_title">그룹핑 글 작성</string>
    <string name="group_title">방 제목</string>
    <string name="group_title_hint">방 제목을 입력해주세요</string>
    <string name="group_area">지역</string>
    <string name="group_area_hint">지역을 선택해주세요</string>
    <string name="group_child_age">아이 나이</string>
    <string name="group_child_age_hint">아이 나이를 선택해주세요</string>
    <string name="group_child_count">아이 인원</string>
    <string name="group_child_count_hint">아이 인원을 선택해주세요</string>
    <string name="group_content">내용</string>
    <string name="group_content_hint">내용을 입력해주세요</string>
    <string name="group_create">등록하기</string>
    <string name="group_create_success">그룹핑 글이 등록되었습니다.</string>
    <string name="group_create_fail">그룹핑 글을 다시 확인해주세요.</string>
    <string name="age_count">%1$s세</string>
    <string name="user_count">%1$s명</string>

    <!-- Grouping Detail -->
    <string name="group_detail_area">지역 : %1$s</string>
    <string name="group_detail_child_age">아이 나이 : >%1$s세</string>
    <string name="group_detail_child_count">아이 인원 : %1$s명</string>

    <!-- Recommended Activity -->
    <string name="play_block">블록 놀이</string>
    <string name="play_drawing">그림 그리기</string>
    <string name="play_cooking">요리하기</string>
    <string name="play_water">물놀이</string>
    <string name="play_plants">식물 심기</string>

    <string name="play_block_explanation">성장하는 시기에 블록놀이는 재미와 함께 두뇌회전에 도움이 될 수 있어요~ 블록놀이를 통해 멋진 작품을 만들어보아요!</string>
    <string name="play_drawing_explanation">아이의 상상력을 펼칠 수 있는 그림그리기를 추천합니다~\n날씨가 좋은 날에는 아이와 함께 소풍도 즐기며 풍경을 그리는 것도 좋아요!</string>
    <string name="play_cooking_explanation">아이와 함께 맛있는 음식을 만들어 보세요!\n여러 재료들을 만지며 촉감놀이도 되며 좋은 기억을 남길 수 있어요~</string>
    <string name="play_water_explanation">아이와 부모님이 함께하는 물놀이는 아이에게 색다른 경험을 주고 좋은 추억을 남길 수 있어요!\n물놀이를 추천 드립니다 :)</string>
    <string name="play_plants_explanation">아이와 화단을 식물을 심어보는건 어떤가요?\n작은 화분을 구입하여 아이와 같이 조그마한 화단을 꾸며보는 것도 좋을 것 같네요^_^</string>

</resources>